# data-copilot

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  fly.toml
apps/api/copilot/: __init__.py  cache.py  checkpointer.py  config.py  cost.py  dashboards.py  db.py  embeddings.py  indexer.py  llm.py  main.py  mcp_server.py  profiler.py  saved.py  security.py
apps/api/copilot/agent/: __init__.py  compaction.py  coverage.py  critic.py  dialogue.py  explore.py  feature_flags.py  graph.py  insight.py  nodes.py  prompts.py  retriever.py  risk.py  semantic_node.py  sql_safety.py  state.py  visualize.py
apps/api/copilot/agent/patterns/: __init__.py  detectors.py  node.py
apps/api/copilot/agents/: __init__.py  messages.py  sql_specialist.py  state.py  supervisor.py
apps/api/copilot/agents/analyst/: __init__.py  nodes.py  prompts.py
apps/api/copilot/eval/: __init__.py  __main__.py  cases.py  config.py  runner.py
apps/api/copilot/eval/experiments/: __init__.py  _common.py  analyst.py  coverage_check.py  critic.py  dialogue_context.py  investigate_mode.py  patterns_detection.py  schema_rag.py  self_healing.py  semantic_layer.py
apps/api/copilot/eval/graders/: __init__.py  deterministic.py
apps/api/copilot/eval/reports/: __init__.py  markdown.py
apps/api/copilot/observability/: __init__.py  logging.py  middleware.py
apps/api/copilot/semantic/: __init__.py  models.py  prompts.py  resolver.py
apps/api/tests/: conftest.py  test_admin_stats.py  test_agent_integration.py  test_agent_nodes.py  test_agents.py  test_api_ask.py  test_cache.py  test_checkpointer.py  test_compaction.py  test_cost.py  test_coverage.py  test_critic.py  test_dashboards.py  test_dashboards_endpoints.py  test_dialogue.py  test_embeddings.py  test_eval_cases.py  test_eval_graders.py  test_eval_main.py  test_eval_runner.py  test_explore.py  test_health.py  test_insight.py  test_mcp_server.py  test_patterns_detectors.py  test_patterns_node.py  test_profiler.py  test_retriever.py  test_risk.py  test_saved.py  test_saved_endpoints.py  test_security.py  test_semantic_models.py  test_semantic_node.py  test_semantic_resolver.py  test_sql_safety.py  test_state.py  test_streaming.py  test_visualize.py
apps/web/: .gitignore  .gitkeep  Dockerfile  eslint.config.mjs  fly.toml  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  vitest.config.ts  vitest.setup.ts
apps/web/__tests__/: AddToDashboardButton.test.tsx  CostPanel.test.tsx  CoverageCards.test.tsx  CriticBadge.test.tsx  DashboardCard.test.tsx  DashboardList.test.tsx  InsightPanel.test.tsx  PinButton.test.tsx  SavedDrawer.test.tsx  SemanticPill.test.tsx  sse.test.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/ask/: route.ts
apps/web/app/api/ask/stream/: route.ts
apps/web/app/api/conversations/[threadId]/messages/: route.ts
apps/web/app/api/conversations/[threadId]/save/: route.ts
apps/web/app/api/conversations/saved/: route.ts
apps/web/app/api/dashboards/: route.ts
apps/web/app/api/dashboards/[id]/: route.ts
apps/web/app/api/dashboards/[id]/items/: route.ts
apps/web/app/api/dashboards/[id]/items/[itemId]/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/dashboards/: page.tsx
apps/web/app/dashboards/[id]/: page.tsx
apps/web/components/: AddToDashboardButton.tsx  AgentTrace.tsx  ChartRenderer.tsx  ChatInput.tsx  ChatPanel.tsx  ChatTurn.tsx  CostPanel.tsx  CoverageRefusal.tsx  CriticBadge.tsx  DashboardCard.tsx  DashboardDetailView.tsx  DashboardGrid.tsx  DashboardList.tsx  InsightPanel.tsx  PendingConfirmation.tsx  PinButton.tsx  SavedDrawer.tsx  SchemaTour.tsx  SemanticPill.tsx
apps/web/lib/: api-types.ts  api.ts  server-fetch.ts  types.ts
apps/web/public/: .gitkeep
data/: semantic.yml
data/eval/: .gitkeep  cases.yaml
data/seed/: .gitkeep  00-extensions.sql  02-schema-embeddings.sql  03-schema-profiles.sql  04-saved-conversations.sql  05-dashboards.sql
docs/: DEPLOY-CHECKLIST.md  architecture.md  blog-outline.md  code-walkthrough.md  demo-storyboard.md  deployment-security.md  mcp-setup.md
docs/decisions/: 0001-tech-stack.md  0002-sql-safety.md  0003-embedding-provider.md  0004-self-healing-policy.md  0005-conversation-persistence.md  0006-security-and-multi-tenancy.md  0007-eval-methodology.md  0008-human-in-the-loop.md  0009-visualization-and-insight.md  0010-caching-and-resilience.md  0011-frontend-and-streaming.md  0012-deployment-and-observability.md  0014-multi-agent-supervisor-analyst.md  0015-production-readiness-checklist.md  0016-schema-profiling-and-coverage.md  0017-pattern-detection.md  0018-investigate-mode.md  0019-saved-conversations.md  0020-dashboard-cards.md  0021-sql-verification-loop.md  0022-mcp-server.md  0023-semantic-layer-routing.md  0024-deploy-side-defence.md
docs/eval/: 20260601-045447-analyst.md  20260601-045447-coverage_check.md  20260601-045447-dialogue_context.md  20260601-045447-investigate_mode.md  20260601-045447-patterns_detection.md  20260601-045447-schema_rag.md  20260601-045447-self_healing.md  20260601-045447-summary.md  20260601-143155-critic.md  20260601-143155-summary.md  20260601-154656-semantic_layer.md  20260601-154656-summary.md  README.md
docs/observability/: 01-current-state.md  03-structured-logging.md
notebooks/: .gitkeep  eval-walkthrough.ipynb
scripts/: deploy.sh  dev.sh  make-env.sh
