[project]
name = "data-copilot"
version = "0.1.0"
description = "Enterprise-grade Text-to-SQL agent with self-healing, schema-aware retrieval, and observability."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Rachel Zhang" },
]
keywords = ["llm", "agent", "text-to-sql", "langgraph", "rag"]

dependencies = [
    # ---------- LangChain ecosystem ----------
    "langchain>=0.3.7",
    "langchain-core>=0.3.15",
    "langchain-community>=0.3.7",
    "langchain-openai>=0.2.8",          # DeepSeek uses OpenAI-compatible API
    "langgraph>=0.2.50",
    "langgraph-checkpoint>=2.0.0",
    "langsmith>=0.1.140",

    # ---------- Embeddings ----------
    "dashscope>=1.20.0",                # Alibaba DashScope for embeddings

    # ---------- Database ----------
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.30",
    "pgvector>=0.3.0",

    # ---------- Web framework ----------
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # ---------- Utilities ----------
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.3.0",
]
eval = [
    "ragas>=0.2.0",
    "pandas>=2.2.0",
]

[project.urls]
Repository = "https://github.com/rachel-zhang-dev/data-copilot"
Issues = "https://github.com/rachel-zhang-dev/data-copilot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/copilot"]

# ============================================================
#  Tooling configuration
# ============================================================

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "data"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["notebooks/", "data/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]
pythonpath = ["apps/api"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow",
]
